@@ -13,9 +13,14 @@ class FollowMetaTest < Test::Unit::TestCase
 
   def test_follow_meta_if_set
     @agent.follow_meta_refresh = true
+
     page = @agent.get('http://localhost/tc_follow_meta.html')
-    assert_equal('http://localhost/index.html', page.uri.to_s)
+
     assert_equal(2, @agent.history.length)
+    assert_equal('http://localhost/tc_follow_meta.html',
+                 @agent.history[0].uri.to_s)
+    assert_equal('http://localhost/index.html', page.uri.to_s)
+    assert_equal('http://localhost/index.html', @agent.history.last.uri.to_s)
   end
 
   def test_always_follow_302
